# iio_ros2_workshop

./: .gitignore  README.md  compose.yaml
.devcontainer/: devcontainer.json
modules/00-setup/: README.md  host-setup.md  rpi5-setup.md  verification.md
modules/01-adi-sensors/: README.md  hands-on-guide.md  slides.md
modules/01-adi-sensors/exercises/: 01-discovery-challenge.md  02-configuration-challenge.md  03-topic-challenge.md
modules/01-adi-sensors/solutions/: checkpoint.md
modules/02-sensor-bringup/: README.md  hands-on-guide.md  slides.md
modules/02-sensor-bringup/ad7124_workshop/: CMakeLists.txt  package.xml
modules/02-sensor-bringup/ad7124_workshop/config/: ad7124.yaml
modules/02-sensor-bringup/ad7124_workshop/launch/: bringup.launch.py  buffer_setup.launch.py  config_attributes.launch.py
modules/02-sensor-bringup/exercises/: 01-config-challenge.md  02-buffer-challenge.md  03-verification-challenge.md
modules/02-sensor-bringup/solutions/: checkpoint.md
modules/03-processing-package/: README.md  hands-on-guide.md  slides.md
modules/03-processing-package/code-templates/: minimal_processor.py
modules/03-processing-package/exercises/: 01-package-challenge.md  02-service-client.md  03-launch-integration.md
modules/03-processing-package/solutions/: adc_processor_node.py  bringup_extended.launch.py  checkpoint.md
